--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ main{
     align-self: center;
     border: none;
     padding: 0.9rem;
-    border-radius: 14px;
+    border-radius: 50px;
     width: 200px;
     cursor: pointer;
     background-color: #ff8a50;
@@ -47,6 +47,7 @@ main{
     background-color: #ff5500;
     box-shadow: #ff550086 0px 5px 20px;
     border-radius: 50px;
+    width: 150px;
     
 }
 .hero-content{
@@ -55,16 +56,21 @@ main{
     justify-content: center;
     flex-direction: column;
 }
-
+/* .hero-container{
+    min-height: 100vh;
+    width: 100%;
+    display: grid;
+    align-items: center;
+} */
 .hero{
     margin-top: 2rem;
     display: grid;
     place-items: center;
-    min-height: 80vh;
-    width: 80vw;
+    height: 82vh;
+    width: 87vw;
     background-color: #fff;
     border-radius: 25px;
-    padding: 0 1rem;
+    padding: 0 1.2rem;
 }
 @media only screen and (max-width: 900px){
     .hero-content h1{
@@ -80,8 +86,8 @@ main{
     .hero{
         display: grid;
         place-items: center;
-        min-height: 80vh;
-        width: 95vw;
+        min-height: 75vh;
+        width: 89vw;
         background-color: #fff;
         border-radius: 45px;
     }
