--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ main{
     margin-top: 2rem;
     display: grid;
     place-items: center;
-    height: 82vh;
+    min-height: 82vh;
     width: 87vw;
     background-color: #fff;
     border-radius: 25px;
