--- a/nav.css
+++ b/nav.css
@@ -1,4 +1,5 @@
 header {
+    position: absolute;
     top: 0;
     width: 100%;
     display: flex;
@@ -11,7 +12,8 @@ header {
 
 nav {
     margin-top: 1rem;
-    background: #ffffff;
+    background: #ffffffd0;
+    backdrop-filter: blur(20px);
     transition: .5s;
     position: fixed;
     width: 100%;
@@ -83,6 +85,7 @@ nav .link-container>a:active {
     position: relative;
     text-align: left;
 }
+
 
 @media only screen and (max-width: 900px) {
     header {
