--- a/style.css
+++ b/style.css
@@ -14,11 +14,17 @@ body {
     min-width: 300px;
 }
 main{
+    min-height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url(https://images.unsplash.com/photo-1604382354936-07c5d9983bd3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 .hero-content h1{
     margin-top: 1.5rem;
@@ -64,12 +70,13 @@ main{
     align-items: center;
 } */
 .hero{
-    margin-top: 2rem;
+    margin-top: 5rem;
     display: grid;
     place-items: center;
     min-height: 82vh;
     width: 87vw;
-    background-color: #fff;
+    background-color: #ffffffe0;
+    backdrop-filter: blur(20px);
     border-radius: 25px;
     padding: 0 1.2rem;
 }
@@ -89,7 +96,7 @@ main{
         place-items: center;
         min-height: 65vh;
         width: 90vw;
-        background-color: #fff;
+        background-color: #ffffffd7;
         border-radius: 45px;
     }
     .hero-content{
