--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ main{
         font-size: 1rem;
     }
     .hero{
+        margin-top: 2rem;
         display: grid;
         place-items: center;
         min-height: 65vh;
