--- a/style.css
+++ b/style.css
@@ -14,21 +14,17 @@ body {
     min-width: 300px;
 }
 main{
-    min-height: 100vh;
+    
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url(https://images.unsplash.com/photo-1604382354936-07c5d9983bd3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: center;
+   
 }
 .hero-content h1{
     margin-top: 1.5rem;
-    color:#ff8a50;
+    color:#ff6b22;
     font-size: 4rem;
 }
 .hero-content {
@@ -44,7 +40,7 @@ main{
     border-radius: 50px;
     width: 180px;
     cursor: pointer;
-    background-color: #ff8a50;
+    background-color: #ff742e;
     color: #fff;
     font-size: 1.2rem;
     transition: .3s ease-in-out;
@@ -63,28 +59,37 @@ main{
     justify-content: center;
     flex-direction: column;
 }
-/* .hero-container{
+.hero-container{
     min-height: 100vh;
     width: 100%;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-} */
-.hero{
-    margin-top: 5rem;
-    display: grid;
-    place-items: center;
-    min-height: 82vh;
+    justify-content: center;
+    background-image: url(https://images.unsplash.com/photo-1604382354936-07c5d9983bd3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.container{
     width: 87vw;
     background-color: #ffffffe0;
     backdrop-filter: blur(20px);
     border-radius: 25px;
     padding: 0 1.2rem;
 }
+.hero{
+    margin-top: 5rem;
+    display: grid;
+    place-items: center;
+    min-height: 82vh;
+   
+}
 @media only screen and (max-width: 900px){
     .hero-content h1{
         margin-top: 1rem;
-        color:#ff8a50;
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
     .hero-content {
         margin-top: 1rem;
@@ -92,7 +97,7 @@ main{
         font-size: 1rem;
     }
     .hero{
-        margin-top: 2rem;
+        margin-top: 1rem;
         display: grid;
         place-items: center;
         min-height: 65vh;
