--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background: #e3f7ff;
+    background: #eefaff;
     min-width: 300px;
 }
 main{
@@ -22,7 +22,10 @@ main{
     justify-content: center;
    
 }
-.hero-content h1{
+h1,h2{
+    color:#ff6b22;
+}
+h1{
     margin-top: 1.5rem;
     color:#ff6b22;
     font-size: 4rem;
@@ -86,6 +89,59 @@ main{
     min-height: 82vh;
    
 }
+.about{
+    margin: 5rem 0;
+    display: grid;
+    place-items: center;
+    padding: 2rem 0;
+    
+}
+.about-container {
+    width: 65vw;
+    background-color: #ffffffe0;
+    backdrop-filter: blur(20px);
+    border-radius: 25px;
+    padding: 0 1.2rem;
+}
+.about-container .about-tilte{
+    display: block;
+    text-align: center;
+    padding: 1rem;
+}
+.about-content{
+    display: flex;
+    padding: 1.5rem;
+}
+
+.about-tilte h2{
+    font-size: 2rem;
+}
+.flex-one{
+    flex: 1;
+}
+.about-content .image-about {
+    width: 100%;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    padding: 0 2rem;
+}
+.about-content .image-about img{
+    border-radius: 12px;
+    width: 350px;
+    height: 300px;
+    object-fit: cover;
+}
+.info-about{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+}
+
+
+/*  ----------------- Responsive  ------------------- */
+
 @media only screen and (max-width: 900px){
     .hero-content h1{
         margin-top: 1rem;
@@ -105,8 +161,30 @@ main{
         background-color: #ffffffd7;
         border-radius: 45px;
     }
+    .about-content .image-about img{
+        width: 100%;
+    }
     .hero-content{
         padding: 0 1rem;
+       
     }
+    .about-content{
+        flex-direction: column;
+    }
+    .info-about{
+        margin-top: 1.2rem;
+
+    }
+    .about-content .image-about {
+        
+        padding: 1rem 0;
+    }
+
+    .about-container {
+        width: 87vw;
+        margin-top: -200px;
+        box-shadow: rgba(114, 162, 191, 0.25) 0px 50px 100px -20px, #0000004d 0px 30px 60px -30px;
+    }
+
 
 }
