--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ h1{
     }
 
     .about-container {
-        width: 90vw;
+        width: 100%;
         margin-top: -200px;
         box-shadow: rgba(114, 162, 191, 0.25) 0px 50px 100px -20px, #0000004d 0px 30px 60px -30px;
     }
