--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ h1 {
 
 .about-content {
     display: flex;
-    padding: 1.5rem;
+    padding:  1.5rem 1.5rem 2rem 1.5rem;
 }
 
 .about-tilte h2 {
