--- a/style.css
+++ b/style.css
@@ -32,13 +32,13 @@ h2 {
 
 h1 {
     margin-top: 1.5rem;
-    color: #ff6b22;
+    color: #fff;
     font-size: 4rem;
 }
 
 .hero-content {
     margin-top: 1rem;
-    color: #315475;
+    color: #fff;
     font-size: 1.2rem;
 }
 
@@ -72,7 +72,6 @@ h1 {
 }
 
 .hero-container {
-    min-height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -86,30 +85,33 @@ h1 {
 }
 
 .container {
-    width: 87vw;
-    background-color: #ffffffe0;
-    backdrop-filter: blur(20px);
-    border-radius: 25px;
+    width: 100%;
+    /* background-color: #00000050; */
+    /* backdrop-filter: blur(20px); */
     padding: 0 1.2rem;
 }
 
 .hero {
-    margin-top: 5rem;
+    background-color: #00000074;
     display: grid;
     place-items: center;
-    min-height: 67vh;
+    min-height: 100vh;
 
 }
 
 .about {
-    margin: 5rem 0;
+    width: 100%;
+    margin: -200px 0;
     display: grid;
     place-items: center;
-    padding: 2rem 0;
+    padding: 2.5rem 0;
+    background: #eefaff;
+    border-radius: 65px 65px 25px  25px;
 
 }
 
 .about-container {
+    margin-top: 2rem;
     width: 65vw;
     background-color: #fffffffc;
     backdrop-filter: blur(20px);
@@ -158,10 +160,23 @@ h1 {
 
 }
 
+body::-webkit-scrollbar {
+    width: 0.6rem;
+    background-color: #ff742e;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 50px;
+    background: #eefaff;
+}
 
 /*  ----------------- Responsive  ------------------- */
 
 @media only screen and (max-width: 900px) {
+   
+    .hero-container {
+        min-height: 100vh;
+    }
     .hero-content h1 {
         margin-top: 1rem;
         font-size: 2.5rem;
@@ -169,18 +184,22 @@ h1 {
 
     .hero-content {
         margin-top: 1rem;
-        color: #315475;
-        font-size: 1rem;
     }
 
     .hero {
-        margin-top: 1rem;
+        margin-top: 5rem;
         display: grid;
         place-items: center;
         min-height: 65vh;
         width: 90vw;
-        background-color: #ffffffd7;
+        background-color: #00000097;
         border-radius: 45px;
+    }
+    .about {
+        width: 100%;
+        margin:0;
+        border-radius: 0;
+    
     }
 
     .about-content .image-about img {
@@ -207,10 +226,9 @@ h1 {
     }
 
     .about-container {
-        border-radius: 65px 65px 25px  25px;
         width: 100%;
-        margin-top: -200px;
-        box-shadow: rgba(114, 162, 191, 0.25) 0px 50px 100px -20px, #0000004d 0px 30px 60px -30px;
+        margin-top: -100px;
+        box-shadow: rgba(163, 212, 220, 0.25) 0px 50px 100px -20px, #ccf7ff 0px 30px 60px -30px;
     }
 
 
