--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ h1 {
 
 .about {
     width: 100%;
-    margin: -200px 0;
+    margin: -150px 0 0 0 ;
     display: grid;
     place-items: center;
     padding: 2.5rem 0;
@@ -113,6 +113,7 @@ h1 {
 }
 
 .about-container {
+    max-width: 900px;
     margin-top: 2rem;
     width: 65vw;
     background-color: #fffffffc;
@@ -152,7 +153,7 @@ h1 {
 
 .about-content .image-about img {
     border-radius: 12px;
-    width: 500px;
+    width: 300px;
     transform: rotate(45deg);
 
 }
