--- a/scroll_horizontal.css
+++ b/scroll_horizontal.css
@@ -7,10 +7,12 @@
     border-radius: 15px;
     position: relative;
     transition: .5s;
+    background-color: #f2ffff;
+    box-shadow: #00000026 1.95px 1.95px 2.6px;
 }
 
 .card:hover {
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+    box-shadow: #274f6b40 0px 25px 50px -12px;
 }
 
 .card img {
@@ -30,7 +32,6 @@
 
 .scroll-container {
     width: 100%;
-    min-height: 100vh;
     display: grid;
     align-items: center;
     justify-content: center;
@@ -56,8 +57,10 @@
     border-radius: 50px;
     background: #2743661f;
 }
-
-@media only screen and (max-width: 760px) {
+.scroll-2{
+    margin-top: -2.5rem;
+}
+@media only screen and (max-width: 900px) {
     .scroll {
         overflow: hidden;
         /* width:100vw ; */
