--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,500;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,700;0,800;0,1000;1,200;1,300;1,500;1,800;1,900;1,1000&display=swap');
-* {
+*,html {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -8,13 +8,14 @@
     /* font-family: 'Nunito', sans-serif; */
     /* transition: .5s; */
     text-decoration: none;
+    
+    scroll-behavior: smooth;
 
 }
 
 body {
     background: #eefaff;
     /* min-width: 300px; */
-    scroll-behavior: smooth;
 }
 
 main {
@@ -157,6 +158,12 @@ h1 {
     transform: rotate(45deg);
 
 }
+.img-destop{
+    display: block;
+}
+.img-mobile{
+    display: none;
+}
 
 .info-about {
     display: flex;
@@ -237,6 +244,11 @@ body::-webkit-scrollbar-thumb {
         transform: rotate(-2deg);
     
     }
-
+    .img-destop{
+        display: none;
+    }
+    .img-mobile{
+        display: block;
+    }
 
 }
